--- a/projects/Amlogic-ce/packages/addons/service/aml-vnc/changelog.txt
+++ b/projects/Amlogic-ce/packages/addons/service/aml-vnc/changelog.txt
@@ -1,2 +1,14 @@
+20.0.104
+- update language strings file
+
+103
+- improvements
+
+102
+- libvncserver bump
+
+101
+- CoreELEC rebrand
+
 100
 - Initial release
