--- a/projects/Amlogic-ce/packages/addons/service/aml-vnc/changelog.txt
+++ b/projects/Amlogic-ce/packages/addons/service/aml-vnc/changelog.txt
@@ -1,3 +1,6 @@
+20.3.1
+- make IPv6 listen port consistent with IPv4 port
+
 20.1.0
 - fix password authentication when building with openssl >=3.0.0
 
