--- a/projects/Amlogic-ce/packages/addons/service/aml-vnc/changelog.txt
+++ b/projects/Amlogic-ce/packages/addons/service/aml-vnc/changelog.txt
@@ -1,3 +1,6 @@
+21.0.6
+- bump package to 1.2.0
+
 21.0.5
 - replace package source git repository
 - creating a source directory with the necessary files and their modifications
